cleaning the notebook and description

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -23,12 +23,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import cv2\n",
+    "import math\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "import numpy as np\n",
-    "import cv2\n",
     "import os\n",
+    "\n",
     "from PIL import Image\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
@@ -45,14 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
-    "\n",
     "def grayscale(img):\n",
-    "    \"\"\"Applies the Grayscale transform\n",
-    "    This will return an image with only one color channel\n",
-    "    but NOTE: to see the returned image as grayscale\n",
-    "    (assuming your grayscaled image is called 'gray')\n",
-    "    you should call plt.imshow(gray, cmap='gray')\"\"\"\n",
+    "    \"\"\"Applies the Grayscale transform\"\"\"\n",
     "    return cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
     "    \n",
     "def canny(img, low_threshold, high_threshold):\n",
@@ -66,28 +63,23 @@
     "def region_of_interest(img, vertices):\n",
     "    \"\"\"\n",
     "    Applies an image mask.\n",
-    "    \n",
-    "    Only keeps the region of the image defined by the polygon\n",
-    "    formed from `vertices`. The rest of the image is set to black.\n",
-    "    `vertices` should be a numpy array of integer points.\n",
     "    \"\"\"\n",
-    "    #defining a blank mask to start with\n",
+    "    # defining a blank mask to start with\n",
     "    mask = np.zeros_like(img)   \n",
     "    \n",
-    "    #defining a 3 channel or 1 channel color to fill the mask with depending on the input image\n",
+    "    # defining a 3 channel or 1 channel color to fill the mask with depending on the input image\n",
     "    if len(img.shape) > 2:\n",
     "        channel_count = img.shape[2]  # i.e. 3 or 4 depending on your image\n",
     "        ignore_mask_color = (255,) * channel_count\n",
     "    else:\n",
     "        ignore_mask_color = 255\n",
     "        \n",
-    "    #filling pixels inside the polygon defined by \"vertices\" with the fill color    \n",
+    "    # filling pixels inside the polygon defined by \"vertices\" with the fill color    \n",
     "    cv2.fillPoly(mask, vertices, ignore_mask_color)\n",
     "    \n",
-    "    #returning the image only where mask pixels are nonzero\n",
+    "    # returning the image only where mask pixels are nonzero\n",
     "    masked_image = cv2.bitwise_and(img, mask)\n",
     "    return masked_image\n",
-    "\n",
     "\n",
     "def draw_lines(img, lines, color=[255, 0, 0], thickness=2):\n",
     "    if lines:\n",
@@ -113,8 +105,6 @@
     "    \n",
     "def hough_lines(img, rho, theta, threshold, min_line_len, max_line_gap, filter_lines=None):\n",
     "    \"\"\"\n",
-    "    `img` should be the output of a Canny transform.\n",
-    "        \n",
     "    Returns an image with hough lines drawn.\n",
     "    \"\"\"\n",
     "    lines = cv2.HoughLinesP(img, rho, theta, threshold, np.array([]), minLineLength=min_line_len, maxLineGap=max_line_gap)\n",
@@ -130,15 +120,9 @@
     "\n",
     "def weighted_img(img, initial_img, α=0.8, β=1., γ=0.):\n",
     "    \"\"\"\n",
-    "    `img` is the output of the hough_lines(), An image with lines drawn on it.\n",
-    "    Should be a blank image (all black) with lines drawn on it.\n",
-    "    \n",
-    "    `initial_img` should be the image before any processing.\n",
-    "    \n",
     "    The result image is computed as follows:\n",
     "    \n",
     "    initial_img * α + img * β + γ\n",
-    "    NOTE: initial_img and img must be the same shape!\n",
     "    \"\"\"\n",
     "    return cv2.addWeighted(initial_img, α, img, β, γ)"
    ]
@@ -147,17 +131,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build a Lane Finding Pipeline\n",
+    "### Lane Finding Pipeline\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Build the pipeline and run your solution on all test_images. Make copies into the `test_images_output` directory, and you can use the images in your writeup report.\n",
-    "\n",
-    "Try tuning the various parameters, especially the low and high Canny thresholds as well as the Hough lines parameters."
    ]
   },
   {
@@ -434,11 +409,6 @@
    ],
    "source": [
     "white_output = 'test_videos_output/solidWhiteRight.mp4'\n",
-    "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
-    "## To do so add .subclip(start_second,end_second) to the end of the line below\n",
-    "## Where start_second and end_second are integer values representing the start and end of the subclip\n",
-    "## You may also uncomment the following line for a subclip of the first 5 seconds\n",
-    "##clip1 = VideoFileClip(\"test_videos/solidWhiteRight.mp4\").subclip(0,5)\n",
     "clip1 = VideoFileClip(\"test_videos/solidWhiteRight.mp4\")\n",
     "white_clip = clip1.fl_image(find_lanes) #NOTE: this function expects color images!!\n",
     "%time white_clip.write_videofile(white_output, audio=False)"
@@ -691,96 +661,6 @@
     "The solution was to find other color transformation that will preserve yellow lane difference. \n",
     "All RGB channels store different information about the color - applying canny to all of them an then merging result from 3 channels fixed 'dissappearing lane recognition'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# **Finding Lane Lines on the Road** \n",
-    "\n",
-    "---\n",
-    "\n",
-    "**Finding Lane Lines on the Road**\n",
-    "\n",
-    "The goals / steps of this project are the following:\n",
-    "* Make a pipeline that finds lane lines on the road\n",
-    "* Reflect on your work in a written report\n",
-    "\n",
-    "\n",
-    "[//]: # (Image References)\n",
-    "\n",
-    "[image1]: ./test_images_output/solidWhiteRight.jpg \"Sample output\"\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Reflection\n",
-    "\n",
-    "### 1.  Pipeline description \n",
-    "\n",
-    "My pipeline consisted of 5 steps. \n",
-    " - **Gaussian Blur**  \n",
-    "  This method was used to remove compression artifacts and very detailed parts of image\n",
-    " - **Canny edge detection on R,G,B channes separately**  \n",
-    "   Canny edge detection is performed on 3 channels separately and then merged. Doing that instead of grayscale is to contain more edges referring do color details (on grayscale image yellow lane can dissappear in some ighting contions)\n",
-    " - **Two regions of interests (ROIs)**  \n",
-    "   To apply specific lines slopes range spearate processing is done for left and right side of video\n",
-    " - **Detect Hough lines for ROIs**  \n",
-    "   Hough lines are searching for lines after canny edge detection. The found lines are filtered by allowed slope range.\n",
-    "   hough_lines was equipped with new parameter (method to filter the lines is passed)\n",
-    " - **Average and extrapolate hough lines**  \n",
-    "   All lines on left and right are separately averaged and exrapolated to fit corresponding ROI\n",
-    " - **Merge ROI branhces, draw lines, produce output**  \n",
-    "\n",
-    "draw_lines method \n",
-    "\n",
-    "The sample output of lane detection looks like below:\n",
-    "\n",
-    "![alt text][image1]\n",
-    "\n",
-    "\n",
-    "### 2. Identify potential shortcomings with your current pipeline\n",
-    "\n",
-    "One potential shortcoming would be what would happen when the lanes are chnaged in rapid manner: the allowed line slope range could cause lanes not to be recognized.\n",
-    "\n",
-    "Another shortcoming could be that different lighting conditions (like night, rain etc.) could cause simmilar isuses to dissappearing left lane in challenge video. \n",
-    "\n",
-    "Using windscreen wipers could also introduce some false lines for edge detecion in slope range and cause averaged lane line to be less accurate.\n",
-    "\n",
-    "\n",
-    "### 3. Suggest possible improvements to your pipeline\n",
-    "\n",
-    "A possible improvement would be to address lane consistency. Remembering some number of last results could fill any single missing frmaes. Also moving average could cause line to be more stable. \n",
-    "\n",
-    "Another potential improvement could be to inroduce neural network to be sure what is lane line and what is not to focus only on proper edges.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
